--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,48 +4,48 @@
       <div class="row">
         <div class="col-xs-12  col-sm-3">
           <div class="footer-widgets__social">
-            <img class="push-down-10" alt="Footer Logo" src="assets/logo-footer.png" width="139" height="35">
-            <p class="push-down-15">Adipiscing elit. Ut ullamcorper consectetur, non lacinia turpis suscipit non. Estibulum nu nc lacus, tincidunt non odio eu, scelerisque tristique quam.</p>
-            <a class="social-container" href="https://www.facebook.com/ProteusNet"><span class="zocial-facebook"></span></a>
-            <a class="social-container" href="https://twitter.com/ProteusNetCom"><span class="zocial-twitter"></span></a>
+            <img class="push-down-10" alt="Footer Logo" src="assets/logo_mini.png">
+            <p class="push-down-15">Text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text.</p>
+            <a class="social-container" href="#"><span class="zocial-facebook"></span></a>
+            <a class="social-container" href="#"><span class="zocial-twitter"></span></a>
             <a class="social-container" href="#"><span class="zocial-email"></span></a>
-            <a class="social-container" href="http://www.youtube.com/user/ProteusNetCompany"><span class="zocial-youtube"></span></a>
+            <a class="social-container" href="http://www.youtube.com/watch?v=XMg9sFRSNBQ"><span class="zocial-youtube"></span></a>
           </div>
         </div>
         <div class="col-xs-12  col-sm-3">
           <nav class="footer-widgets__navigation">
             <div class="footer-wdgets__heading--line">
-              <h4 class="footer-widgets__heading">Navigation</h4>
+              <h4 class="footer-widgets__heading">Навигация</h4>
             </div>
             <ul class="nav nav-footer">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="shop.html">Shop</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="about-us.html">Pages</a></li>
-              <li><a href="features.html">Features</a></li>
-              <li><a href="elements.html">Elements</a></li>
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Продукция</a></li>
+              <li><a href="#">Контакты</a></li>
+              <li><a href="#">Shop</a></li>
             </ul>
           </nav>
         </div>
         <div class="col-xs-12  col-sm-3">
           <div class="footer-widgets__navigation">
             <div class="footer-wdgets__heading--line">
-              <h4 class="footer-widgets__heading">Popular Tags</h4>
+              <h4 class="footer-widgets__heading">Популярные тэги</h4>
             </div>
-            <a class="tag" href="shop.html">Food</a> <a class="tag" href="shop.html">Fungus</a> <a class="tag" href="shop.html">Lifestyle</a> <a class="tag" href="shop.html">Extras</a> <a class="tag" href="shop.html">Tea</a> <a class="tag" href="shop.html">Coffe</a> <a class="tag" href="shop.html">Fruit</a> <a class="tag" href="shop.html">Fruti &amp; vegetables</a> <a class="tag" href="shop.html">Fungus</a> <a class="tag" href="shop.html">Healthy</a>
+            <a class="tag" href="shop.html">Еда</a> <a class="tag" href="shop.html">Для дома</a> <a class="tag" href="shop.html">Для отдыха</a> <a class="tag" href="shop.html">Аптека</a> <a class="tag" href="shop.html">Косметика</a> <a class="tag" href="shop.html">Shop</a> <a class="tag" href="shop.html">Shop</a> <a class="tag" href="shop.html">Shop</a> <a class="tag" href="shop.html">Shop</a> <a class="tag" href="shop.html">Healthy</a>
           </div>
         </div>
         <div class="col-xs-12  col-sm-3">
           <div class="footer-widgets__navigation">
             <div class="footer-wdgets__heading--line">
-              <h4 class="footer-widgets__heading">Contact Us</h4>
+              <h4 class="footer-widgets__heading">Контакты</h4>
             </div>
-            <a class="footer__link" href="#">Organique ltd.</a><br>
-            Tehnološki park 19,<br>
-            1000 Ljubljana, Slovenia<br>
-            <a class="footer__link--small" href="contact-2.html">View Google map <span class="glyphicon glyphicon-chevron-right glyphicon--footer-small"></span></a><br><br>
-            <a class="footer__link" href="#"><span class="glyphicon glyphicon-earphone glyphicon--footer"></span> +386 31 567 537</a><br>
-            <a class="footer__link" href="#"><span class="glyphicon glyphicon-envelope glyphicon--footer"></span> hello@proteusnet.com</a>
+            <a class="footer__link" href="#">ООО "Звенящие кедры России"</a><br>
+            г. Липецк, ул. Космонавтов, д.98 <br>
+            Советский район, 9-й микрорайон <br>
+            ТЦ «Ноябрьский» <br>
+            <%= link_to "Посмотреть на карте ", contact_path, class: "footer__link--small" %><span class="glyphicon glyphicon-chevron-right glyphicon--footer-small"></span><br><br>
+            <a class="footer__link" href="#"><span class="glyphicon glyphicon-earphone glyphicon--footer"></span> +7 (909) 222-78-50</a><br>
+            <a class="footer__link" href="#"><span class="glyphicon glyphicon-envelope glyphicon--footer"></span> lipetsk@megre.ru</a>
           </div>
         </div>
       </div>
@@ -54,14 +54,14 @@
   <div class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12  col-sm-6">
+        <div class="col-xs-12  col-sm-7">
           <div class="footer__text--link">
-            <a class="footer__link" href="#">Organique</a> HTML Theme © Copyright 2014. Images of products by <a class="footer__link" href="http://www.nutrisslim.com/" target="_blank">Nutrisslim</a>.
+            <a class="footer__link" href="#">Звенящие кедры России</a> © Copyright 2014. Официальный представитель в <a class="footer__link" href="#" target="_blank">Липецке</a>.
           </div>
         </div>
-        <div class="col-xs-12  col-sm-6">
+        <div class="col-xs-12  col-sm-5">
           <div class="footer__text">
-            Made with <span class="glyphicon  glyphicon-heart"></span> by <a class="footer__link" href="http://www.proteusthemes.com/" target="_blank">ProteusThemes</a>
+            Made with <span class="glyphicon  glyphicon-heart"></span> by <a class="footer__link" href="http://www.initweb.ru/" target="_blank">INITweb</a>
           </div>
         </div>
       </div>
