--- a/app/views/product/contact.html.erb
+++ b/app/views/product/contact.html.erb
@@ -35,28 +35,31 @@
 <div class="container  push-down-30">
   <div class="row">
     <div class="col-xs-12">
-      <h1 class="center"><span class="light">Contact</span> Us</h1>
+      <h1 class="center"><span class="light">Наши</span> контакты</h1>
       <hr class="divider">
       <div class="text-shrink">
-        <p class="text-highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate, leo vel malesuada tincidunt, purus nunc tristique erat, at elementum tellus mi nec mi. Nunc rutrum ullamcorper blandit.</p>
+        <p class="text-highlight">Text text text text text text text text text text text text text text text text text text text text text text text text text text text.</p>
       </div>
       <hr class="divider  divider-about">
       <div class="push-down-30"></div>
       <div class="row">
         <div class="col-xs-12  col-sm-3  push-down-30">
-          <h2  class="no-margin"><span class="light">Organique</span> Itd</h2><br/>
-          <p><strong>Dunajska cesta 17,<br>
-            1000 Ljubljana,<br>
-            Slovenia, Europe</strong></p>
-          <span class="glyphicon  glyphicon-earphone"></span> <span class="text-dark">00386 31 567 537</span><br>
-          <span class="glyphicon  glyphicon-envelope"></span> <a class="secondary-link" href="mailto:hello@proteusnet.com"><strong>hello@proteusnet.com</strong></a>
+          <h2  class="no-margin"><span class="light">Звенящие кедры</span> России</h2><br/>
+          <p><strong>г. Липецк,<br>
+            ул. Космонавтов, д.98,<br>
+            Советский район, 9-й микрорайон,<br>
+            ТЦ «Ноябрьский»</strong></p>
+          <span class="glyphicon  glyphicon-earphone"></span> <span class="text-dark">+7 (909) 222-78-50</span><br>
+          <span class="glyphicon  glyphicon-earphone"></span> <span class="text-dark">+7 (905) 684-52-57</span><br>
+
+          <span class="glyphicon  glyphicon-envelope"></span> <a class="secondary-link" href="mailto:lipetsk@megre.ru"><strong>lipetsk@megre.ru</strong></a>
         </div>
         <div class="col-xs-12  col-sm-9">
           <form validate>
             <div class="row">
               <div class="col-xs-12  col-sm-4">
                 <div class="form-group">
-                  <label class="text-dark" for="name">Name <span class="warning">*</span></label>
+                  <label class="text-dark" for="name">Имя <span class="warning">*</span></label>
                   <input type="text" id="name" class="form-control  form-control--contact" required>
                 </div>
                 <div class="form-group">
@@ -64,18 +67,18 @@
                   <input type="text" id="email" class="form-control  form-control--contact" required>
                 </div>
                 <div class="form-group">
-                  <label class="text-dark" for="subject">Subject <span class="warning">*</span></label>
+                  <label class="text-dark" for="subject">Тема <span class="warning">*</span></label>
                   <input type="text" id="subject" class="form-control  form-control--contact" required>
                 </div>
-                <span class="hidden-xs">Fields marked with <span class="warning">*</span> are obligatory</span>
+                <span class="hidden-xs">Отмечены <span class="warning">*</span> обязательные к заполнению</span>
               </div>
               <div class="col-xs-12  col-sm-8">
                 <div class="form-group">
-                  <label class="text-dark" for="message">Message <span class="warning">*</span></label>
+                  <label class="text-dark" for="message">Сообщение <span class="warning">*</span></label>
                   <textarea class="form-control  form-control--contact  form-control--big" id="message" rows="12" required></textarea>
                 </div>
                 <div class="right">
-                  <button type="submit" class="btn  btn-warning">Send now</button>
+                  <button type="submit" class="btn  btn-warning">Отправить</button>
                 </div>
               </div>
             </div>
@@ -83,79 +86,80 @@
         </div>
       </div>
       <div class="push-down-30">
-        <h1 class="center"><span class="light">Our</span> Location And Opening Times</h1>
+        <h1 class="center"><span class="light">Мы</span> находимся</h1>
         <hr class="divider">
       </div>
       <div class="row">
-        <div class="col-xs-12  col-sm-3  push-down-30">
+        <div class="col-xs-12  col-sm-4  push-down-30">
           <div class="contact__opening-time">
             <!-- Opening Times Widget -->
             <div class="sidebar-item  opening-time  light-paper-pattern">
-              <h3 class="opening-time__title">Opening time</h3>
+              <h3 class="opening-time__title">Режим работы</h3>
               <hr class="divider-dark">
               <div class="time-table  js--timetable">
                 <dl class="week-day" data-day="1">
                   <dt>
-                    Monday
+                    Понедельник
                   </dt>
                   <dd>
-                    8:00 - 16:00
+                    10:00 - 18:00
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="2">
                   <dt>
-                    Tuesday
+                    Вторник
                   </dt>
                   <dd>
-                    8:00 - 16:00
+                    10:00 - 18:00
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="3">
                   <dt>
-                    Wednesday
+                    Среда
                   </dt>
                   <dd>
-                    8:00 - 16:00
+                    10:00 - 18:00
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="4">
                   <dt>
-                    Thursday
+                    Четверг
                   </dt>
                   <dd>
-                    8:00 - 16:00
+                    10:00 - 18:00
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="5">
                   <dt>
-                    Friday
+                    Пятница
                   </dt>
                   <dd>
-                    8:00 - 16:00
+                    10:00 - 18:00
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="6">
                   <dt>
-                    Saturday
+                    Суббота
                   </dt>
                   <dd>
-                    8:00 - 16:00
+                    10:00 - 18:00
                   </dd>
                 </dl>
                 <dl class="week-day  closed" data-day="0">
                   <dt>
-                    Sunday
+                    Воскресенье
                   </dt>
                   <dd>
-                    CLOSED
+                    10:00 - 18:00
                   </dd>
                 </dl>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-xs-12  col-sm-9">
-          <div class="simple-map  js--where-we-are" data-latlng="46.049467,14.460506" data-markers="[{lat: 46.049467,lng: 14.460506,title: 'ProteusThemes Ljubljana'},{lat: 46.020569,lng: 15.476118,title: 'ProteusThemes Senovo'}]" data-zoom="6"></div>
+        <div class="col-xs-12  col-sm-2"></div>
+        <div class="col-xs-12  col-sm-6">
+          <script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=8g5_YnaZJ51smenI6kxqWpoQnetvgQ8s&width=600&height=309"></script>
         </div>
       </div>
 
