--- a/app/views/product/about.html.erb
+++ b/app/views/product/about.html.erb
@@ -36,7 +36,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <img alt="#" class="wp-post-image" src="images/dummy/about-image.jpg" width="1140" height="284">
+      <img alt="#" class="wp-post-image" src="assets/logo_about.jpg">
       <h1 class="center"><span class="light">A</span> Little Something About Us</h1>
       <hr class="divider">
       <div class="text-shrink">
@@ -65,25 +65,25 @@
             <div class="push-down-35"></div>
           </div>
           <div class="col-xs-12  col-sm-3  push-down-30">
-            <img alt="#" class="product__image  team-image" src="images/dummy-licensed/team-1.jpg">
+            <img alt="#" class="product__image  team-image" src="assets/dummy-licensed/team-1.jpg">
             <h5>Carl Hansen,</h5>
             <span class="team-title">Chief executive officer</span><br>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper.</span>
           </div>
           <div class="col-xs-12  col-sm-3  push-down-30">
-            <img alt="#" class="product__image  team-image" src="images/dummy-licensed/team-2.jpg">
+            <img alt="#" class="product__image  team-image" src="assets/dummy-licensed/team-2.jpg">
             <h5>Anna Evans,</h5>
             <span class="team-title">Certificated ecologist</span><br>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper.</span>
           </div>
           <div class="col-xs-12  col-sm-3  push-down-30">
-            <img alt="#" class="product__image  team-image" src="images/dummy-licensed/team-3.jpg">
+            <img alt="#" class="product__image  team-image" src="assets/dummy-licensed/team-3.jpg">
             <h5>Heather Reynolds,</h5>
             <span class="team-title">Product manager</span><br>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper.</span>
           </div>
           <div class="col-xs-12  col-sm-3  push-down-30">
-            <img alt="#" class="product__image  team-image" src="images/dummy-licensed/team-4.jpg">
+            <img alt="#" class="product__image  team-image" src="assets/dummy-licensed/team-4.jpg">
             <h5>Andrew Stanley</h5>
             <span class="team-title">Eco - farmer</span><br>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper.</span>
