--- a/app/views/product/about.html.erb
+++ b/app/views/product/about.html.erb
@@ -37,7 +37,7 @@
   <div class="row">
     <div class="col-xs-12">
       <img alt="#" class="wp-post-image" src="assets/logo_about.jpg">
-      <h1 class="center"><span class="light">A</span>1111 Little Something About Us</h1>
+      <h1 class="center"><span class="light">A</span> Little Something About Us</h1>
       <hr class="divider">
       <div class="text-shrink">
         <p class="text-highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate, leo vel malesuada tincidunt, purus nunc tristique erat, at elementum tellus mi nec mi. Nunc rutrum ullamcorper blandit.</p>
