--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,11 +5,14 @@
         <div class="col-xs-12  col-sm-3">
           <div class="footer-widgets__social">
             <img class="push-down-10" alt="Footer Logo" src="assets/logo_mini.png">
-            <p class="push-down-15">Text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text.</p>
-            <a class="social-container" href="#"><span class="zocial-facebook"></span></a>
-            <a class="social-container" href="#"><span class="zocial-twitter"></span></a>
-            <a class="social-container" href="#"><span class="zocial-email"></span></a>
-            <a class="social-container" href="http://www.youtube.com/watch?v=XMg9sFRSNBQ"><span class="zocial-youtube"></span></a>
+            <p class="push-down-15" align="justify">
+              Вся кедровая продукция изготавливается по старинным технологиям! Кедровое масло отжимается таёжным способом на ручном деревянном прессе из кедра! Сбор живицы производится в районах Сибирской тайги! Термической обработке не подвергается! Очищается вручную!
+            </p>
+
+            <a class="social-container" href="http://www.facebook.com/pages/Megre-LLC/148501691860639"><span class="zocial-facebook"></span></a>
+            <a class="social-container" href="http://twitter.com/megreru"><span class="zocial-twitter"></span></a>
+            <a class="social-container" href="http://vk.com/id147567881"><span class="zocial-vk"></span></a>
+            <a class="social-container" href="http://www.youtube.com/user/vmegrecom/"><span class="zocial-youtube"></span></a>
           </div>
         </div>
         <div class="col-xs-12  col-sm-3">
@@ -22,7 +25,6 @@
               <li><a href="#">О компании</a></li>
               <li><a href="#">Продукция</a></li>
               <li><a href="#">Контакты</a></li>
-              <li><a href="#">Shop</a></li>
             </ul>
           </nav>
         </div>
@@ -39,7 +41,7 @@
             <div class="footer-wdgets__heading--line">
               <h4 class="footer-widgets__heading">Контакты</h4>
             </div>
-            <a class="footer__link" href="#">ООО "Звенящие кедры России"</a><br>
+            <a class="footer__link" href="#">ООО "Звенящие Кедры"</a><br>
             г. Липецк, ул. Космонавтов, д.98 <br>
             Советский район, 9-й микрорайон <br>
             ТЦ «Ноябрьский» <br>
@@ -56,7 +58,7 @@
       <div class="row">
         <div class="col-xs-12  col-sm-7">
           <div class="footer__text--link">
-            <a class="footer__link" href="#">Звенящие кедры России</a> © Copyright 2014. Официальный представитель в <a class="footer__link" href="#" target="_blank">Липецке</a>.
+            <a class="footer__link" href="#">Звенящие Кедры</a> © Copyright 2014. Официальный представитель в <a class="footer__link" href="#" target="_blank">Липецке</a>.
           </div>
         </div>
         <div class="col-xs-12  col-sm-5">
