--- a/app/views/product/about.html.erb
+++ b/app/views/product/about.html.erb
@@ -21,11 +21,9 @@
         <nav>
           <ol class="breadcrumb">
 
-            <li><a href="index.html">Home</a></li>
+            <li><%= link_to "Главная", root_path %></li>
 
-            <li><a href="about-us.html">Pages</a></li>
-
-            <li class="active">About Us</li>
+            <li class="active">О компании</li>
 
           </ol>
         </nav>
@@ -37,58 +35,42 @@
   <div class="row">
     <div class="col-xs-12">
       <img alt="#" class="wp-post-image" src="assets/logo_about.jpg">
-      <h1 class="center"><span class="light">A</span> Little Something About Us</h1>
+      <h1 class="center"><span class="light">Становление компании</span> ООО "Мегре"</h1>
       <hr class="divider">
       <div class="text-shrink">
-        <p class="text-highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate, leo vel malesuada tincidunt, purus nunc tristique erat, at elementum tellus mi nec mi. Nunc rutrum ullamcorper blandit.</p>
+        <p class="text-highlight">
+            Начиналось всё в далёком 1998 году, когда я занимался совсем другим бизнесом и имел довольно смутное представление о творчестве Владимира Мегре. В тот год Владимир Николаевич проводил в Геленджике читательскую конференцию, куда и пригласил нас с Полиной и нашей дочерью Ниной. Конференция прошла вполне успешно, а по её окончании я провел ещё 3 недели с Владимиром Николаевичем, после чего вернулся домой и на одном дыхании прочёл книгу «Анастасия». Потом ещё одну, «Звенящие Кедры России». Затем книгу «Пространство любви». Именно этот момент я и считаю переломным в моей судьбе.
+            <br><br>
+            Среди своих знакомых я нашел человека, много лет проработавшего егерем в тайге. С его помощью я надеялся выяснить, где в Новосибирской области есть возможность собрать кедровые шишки. Он согласился показать мне «кедровые» места в области и вскоре мы отправились в тайгу.
+            <br><br>
+            От Новосибирска эти места находятся чуть более 100 км, но добирались мы туда более 4 часов по полевой дороге. Что могло заставить прийти к этому? Складывается впечатление, что кто-то взял за руку и повел именно туда.
+        </p>
       </div>
       <hr class="divider  divider-about">
       <div class="row">
         <div class="col-xs-12 col-sm-6">
-          <h3><span class="light">The</span> Beginnings</h3>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper. Nullam dictum elementum lacus quis facilisis. Phasellus mollis tempus tempus. Fusce ut sagittis quam, quis facilisis tellus. Nam vel aliquet leo. Integer lacus tortor, ullamcorper sit amet interdum at, pulvinar sit amet risus.<p>
-          <h3><span class="light">What's</span> Happening Nowdays</h3>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper. Nullam dictum elementum lacus quis facilisis. Etiam sit amet euismod eros. Phasellus mollis tempus tempus. Fusce ut sagittis quam, quis facilisis tellus. Nam vel aliquet leo. Integer lacus tortor, ullamcorper sit amet interdum at, pulvinar sit amet risus.<p>
+          <h3><span class="light">О</span> тайге и кедре</h3>
+          <p class="text" align="justify">
+            Каждый человек, хотя бы раз побывавший в тайге, никогда не забудет это место. Удивительная красота, энергетика, чистый воздух — хочется устроиться поудобнее и забыть и городской суете и проблемах.
+            Возникает желание пройти вглубь леса. Смотреть, удивляться, прикасаться, гордиться — чувствовать себя частью этого мира. Масштабы этого мира поражают!
+            Первое что бросается в глаза — это высокие, могучие и пушистые кедры. Сразу понимаешь кто тут главный.
+            Обхватив стройный ствол этого гиганта, чувствуешь мощную энергетику. Внимательно рассмотрев веточки кедра, можно заметить, что все они имеют ровно пять иголочек, как пять пальцев у человека. Ну не совпадение ли?
+            Обратившись к научной литературе и народной медицине выясняется, что кедр может дать человеку все, что ему нужно. Это живой дар природы!
+          <p>
         </div>
         <div class="col-xs-12 col-sm-6">
-          <h3><span class="light">Our</span> Plans in the Future</h3>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper. Nullam dictum elementum lacus quis facilisis. Etiam sit amet euismod eros. Phasellus mollis tempus tempus. Fusce ut sagittis quam, quis facilisis tellus. Nam vel aliquet leo. Integer lacus tortor, ullamcorper sit amet interdum at, pulvinar sit amet risus.<p>
-          <h3><span class="light">Bottom</span> Line</h3>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, lectus venenatis ullamcorper. Nullam dictum elementum lacus quis facilisis. Etiam sit amet euismod eros. Phasellus mollis tempus <p>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <h1 class="center"><span class="light">Meet</span> the Team</h1>
-            <hr class="divider">
-            <div class="push-down-35"></div>
+          <h3><span class="light">Цели компании</span> «Звенящие Кедры»</h3>
+          <p class="text">
+            В феврале 2011 года была создана компания «Звенящие Кедры», состоящая из людей, объединенных идеей создания Родовых поместий.
+            Компания предлагает только качественный природный продукт, наполненный теплом человеческих рук, который создан и используется для себя и для других.
+            <br><br>
+            Основными задачами компаниями являются:
+            <br><br>
+            1. Создание множества отделов, магазинов, кафе, ресторанов под знаком «Звенящие Кедры России» для вывода на рынок и реализации новой уникальной, альтернативной продукции;<br>
+            2. Популяризация идеи создания Родовых поместий, ведения здорового образа жизни, качественного питания.<br>
+            Ключевую роль в становлении компании сыграли книги Владимира Мегре.
+          <p>
           </div>
-          <div class="col-xs-12  col-sm-3  push-down-30">
-            <img alt="#" class="product__image  team-image" src="assets/dummy-licensed/team-1.jpg">
-            <h5>Carl Hansen,</h5>
-            <span class="team-title">Chief executive officer</span><br>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper.</span>
-          </div>
-          <div class="col-xs-12  col-sm-3  push-down-30">
-            <img alt="#" class="product__image  team-image" src="assets/dummy-licensed/team-2.jpg">
-            <h5>Anna Evans,</h5>
-            <span class="team-title">Certificated ecologist</span><br>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper.</span>
-          </div>
-          <div class="col-xs-12  col-sm-3  push-down-30">
-            <img alt="#" class="product__image  team-image" src="assets/dummy-licensed/team-3.jpg">
-            <h5>Heather Reynolds,</h5>
-            <span class="team-title">Product manager</span><br>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper.</span>
-          </div>
-          <div class="col-xs-12  col-sm-3  push-down-30">
-            <img alt="#" class="product__image  team-image" src="assets/dummy-licensed/team-4.jpg">
-            <h5>Andrew Stanley</h5>
-            <span class="team-title">Eco - farmer</span><br>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque consectetur leo, eu porta metus. Nulla justo lacus, aliquam vel libero nec, viverra placerat neque. Cras nec nunc sollicitudin, faucibus enim tristique, molestie ante. Nunc a dolor eget lectus venenatis ullamcorper.</span>
-          </div>
-        </div>
       </div>
     </div>
   </div>
