--- a/app/views/product/contact.html.erb
+++ b/app/views/product/contact.html.erb
@@ -20,11 +20,9 @@
         <nav>
           <ol class="breadcrumb">
 
-            <li><a href="index.html">Home</a></li>
+            <li><%= link_to "Главная", root_path %></li>
 
-            <li><a href="contact.html">Contact</a></li>
-
-            <li class="active">First Option</li>
+            <li class="active">Контакты</li>
 
           </ol>
         </nav>
@@ -38,7 +36,7 @@
       <h1 class="center"><span class="light">Наши</span> контакты</h1>
       <hr class="divider">
       <div class="text-shrink">
-        <p class="text-highlight">Text text text text text text text text text text text text text text text text text text text text text text text text text text text.</p>
+        <p class="text-highlight-center">Нашу продукцию отличают чистые помыслы при её изготовлении и высокое качество!</p>
       </div>
       <hr class="divider  divider-about">
       <div class="push-down-30"></div>
