--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -25,7 +25,7 @@
         Официальный диллер продукции в Липецке и Липецкой области
       </h2>
       <h1 class="jumbotron__title">
-        Натуральные продукты
+        Продукция новой осознанности...
       </h1>
     </div>
   </div>
@@ -70,7 +70,7 @@
     <div class="row">
       <div class="col-xs-12  col-sm-8">
         <div class="products-navigation__title">
-          <h3><span class="light">Новинки</span> из недр природы </h3>
+          <h3><span class="light">Кладовая</span> природы</h3>
         </div>
       </div>
       <div class="col-xs-12  col-sm-4">
@@ -370,7 +370,7 @@
     <div class="col-xs-12 col-sm-6">
       <a href="shop.html">
         <div class="banners--medium">
-          <span class="banners-text">Новое поступление <strong>натуральной косметики</strong> у нас</span>
+          <span class="banners-text">Природная<strong> аптека</strong></span>
           <span class="glyphicon  glyphicon-circle  glyphicon-chevron-right"></span>
         </div>
       </a>
@@ -378,7 +378,7 @@
     <div class="col-xs-12 col-sm-6">
       <a href="shop.html">
         <div class="banners--medium">
-          <span class="banners-text">Скаидка <strong>30%</strong> на некоторые категории товаров</span>
+          <span class="banners-text">Скидки, акции,<strong> новости</strong></span>
           <span class="glyphicon  glyphicon-circle  glyphicon-chevron-right"></span>
         </div>
       </a>
@@ -387,7 +387,7 @@
   <!-- Navigation -->
   <div class="products-navigation  push-down-15">
     <div class="products-navigation__title">
-      <h3><span class="light">Лечебная</span> продукция</h3>
+      <h3><span class="light">Новинки</span></h3>
     </div>
   </div>
 
@@ -676,7 +676,7 @@
     <div class="col-xs-12 col-sm-4">
       <div class="widgets__navigation">
         <div class="widgets__heading--line">
-          <h4 class="widgets__heading">Лучшие товары</h4>
+          <h4 class="widgets__heading">Для детей</h4>
         </div>
 
 
@@ -754,12 +754,37 @@
         </div>
 
 
+
+        <div class="push-down-20  clearfix">
+          <a href="single-product.html">
+            <img alt="" class="widgets__products" width="78" height="78" src="assets/dummy/w78/7.jpg">
+          </a>
+          <h5 class="products__title">
+            <a class="products__link" href="single-product.html">Bio Apricot Kernels</a>
+          </h5>
+          <span class="line-through">$9.18</span> <span class="products__price--widgets">$6.18</span>
+          <br><br>
+
+
+          <span class="glyphicon glyphicon-star  star-on"></span>
+
+          <span class="glyphicon glyphicon-star  star-on"></span>
+
+          <span class="glyphicon glyphicon-star  star-on"></span>
+
+          <span class="glyphicon glyphicon-star  star-on"></span>
+
+          <span class="glyphicon glyphicon-star  star-off"></span>
+
+        </div>
+
+
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="widgets__navigation">
         <div class="widgets__heading--line">
-          <h4 class="widgets__heading">Лидеры продаж</h4>
+          <h4 class="widgets__heading">Для старшего поколения</h4>
         </div>
 
 
@@ -811,19 +836,44 @@
 
 
 
+        <div class="clearfix  push-down-15">
+          <a href="single-product.html">
+            <img alt="" class="widgets__products" width="78" height="78" src="assets/dummy/w78/24.jpg">
+          </a>
+          <div class="products__title">
+            <a class="products__link" href="single-product.html">Polnozrnati Svedri</a>
+          </div>
+          <span class="line-through">$17.95</span> <span class="products__price--widgets">$14.95</span>
+          <br><br>
+          <div class="products__category">
+            Other
+          </div>
+        </div>
+
+
+
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="widgets__navigation">
         <div class="widgets__heading--line">
-          <h4 class="widgets__heading">Полезный рецепт</h4>
+          <h4 class="widgets__heading">Полезные советы</h4>
         </div>
-        <img alt="#" class="product__image" src="assets/dummy-licensed/recipe.jpg" width="353" height="186">
+        <div style="float: left; margin: 0px 15px 15px 0px;">
+            <img alt="#" class="product__image" src="assets/dummy-licensed/recipe.png" width="160" height="233">
+        </div>
         <div class="products__title">
           <div class="push-down-10"></div>
-          Text text text text text text
+          Елена Гарагуля
+          <br><br>
+          Врач терапевт, фитотерапевт, диетолог, нутрициолог, член Национальной Ассоциации Диетологов и Нутрициологов.
         </div>
-        Text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text.
+        <p align="justify">
+          <br><br>
+          Гармоничное развитие и рост ребенка зависит от полноценного состава его рациона питания и самый идеальный продукт – это грудное материнское молоко, которое тоже должно быть максимально полноценным. Источником практически всех незаменимых питательных веществ являются ядра кедрового ореха, с рекордно высоким содержанием белка (25г на 100г), имеющим все 20 аминокислот и отличающимся высокой усвояемостью до 95%.
+        </p>
+
+        <a data-target=".js--cat-5" class="js--filter-selectable" href="#">Подробнее...</a>
       </div>
     </div>
   </div>
@@ -844,16 +894,31 @@
         <div id="js--testimonails-carousel" class="carousel  slide" data-ride="carousel" data-interval="5000">
           <div class="carousel-inner">
             <div class="item  active">
-              <q class="testimonials__text"> Text text text text text text,<br> text text text text text text text text!</q><br><br>
-              <cite><b>Иванов И.И.,</b></cite> Строитель
+              <q class="testimonials__text">
+
+                Здравствуйте, меня зовут Алла 35 лет, купила у вас крем для лица и была удивлена, постоянно пользуюсь различными кремами известных брендов, после применения вашего заметила исчезновение мелких пятнышек (типа пигментные пятна) на лице, это на самом деле качественный лечебный крем. Спасибо, теперь я ваш постоянный клиент!
+
+              </q>
+              <br><br>
+              <cite><b>Андреева А.И.</b></cite>
             </div>
             <div class="item">
-              <q class="testimonials__text"> Text text text text text text,<br> text text text text text text text text!</q><br><br>
-              <cite><b>Петров П.П.,</b></cite> Музыкант
+              <q class="testimonials__text">
+
+                Меня постоянно мучали боли после операции, врачи назначали разные дорогостоящие препараты, но толку от них мало. Случайно зашла в отдел «Звенящие Кедры России», Оксаночка мне предложила попробовать живичный крем, помазала и сразу почувствовала облегчение. На следующий день купила еще 4 баночки. Спасибо большое!
+
+              </q>
+              <br><br>
+              <cite><b>Звягенцева И.А.</b></cite>
             </div>
             <div class="item">
-              <q class="testimonials__text"> Text text text text text text,<br> text text text text text text text text!</q><br><br>
-              <cite><b>Скамейкина С.С.,</b></cite> Врач
+              <q class="testimonials__text">
+
+              Купила зубную пасту, у меня проблема с деснами, постоянно кровоточат, сначала не поверила что поможет, но после второго использования десны перестали кровоточить, еще всем советую дополнительно натирать десны (я это делаю пальцем) этой пастой и оставлять на ночь. Реально помогает! Советую всем!
+
+            </q>
+              <br><br>
+              <cite><b>Субботина В.А.</b></cite>
             </div>
           </div>
         </div>
