--- a/app/views/product/shop.html.erb
+++ b/app/views/product/shop.html.erb
@@ -40,13 +40,13 @@
     <div class="col-xs-12">
       <div class="push-down-30">
         <div class="banners--big">
-          Text text text text <strong> text text text</strong> text text text
+          Мы - официальные дилеры компании "Звенящие кедры России" в<strong> Липецке и Липецкой области.</strong>
         </div>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12  col-sm-3">
+    <div class="col-xs-12  col-sm-2">
       <aside class="sidebar  sidebar--shop">
         <h3 class="sidebar__title"><span class="light"></span> Продукция</h3>
         <hr class="shop__divider">
@@ -78,6 +78,7 @@
         </div>
       </aside>
     </div>
+    <div class="col-xs-12  col-sm-1"></div>
     <div class="col-xs-12  col-sm-9">
       <div class="grid">
         <ul class="pagination  shop__amount-filter">
