make it better3

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -47,7 +47,7 @@
             <div class="footer-wdgets__heading--line">
               <h4 class="footer-widgets__heading">Контакты</h4>
             </div>
-            <a class="footer__link" href="#">ООО "Звенящие Кедры"</a><br>
+            <a class="footer__link" href="#">Официальный представитель ООО "Звенящие Кедры"</a><br>
             г. Липецк, ул. Космонавтов, д.98 <br>
             Советский район, 9-й микрорайон <br>
             ТЦ «Ноябрьский», 1 этаж (налево) <br>
