--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -7,13 +7,13 @@
   </thead>
   <tbody>
 
-  <% @categories.each_with_index do |category, index| %>
+  <% @categories.each do |category| %>
 
       <tr class="active">
         <td><%= category.name %></td>
         <td>
           <%= link_to 'Редакт.', edit_category_path(category) %>
-          <%= link_to 'Удалить', category_path(category), method: :delete, data: { confirm: 'Вы действительно хотите удалить запись?' } if index > 3 %>
+          <%= link_to 'Удалить', category_path(category), method: :delete, data: { confirm: 'Вы действительно хотите удалить запись?' } if category.id > 3 %>
         </td>
       </tr>
   <% end %>
