--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -64,7 +64,7 @@
               <% end %>
             </td>
             <td>
-              <%= link_to 'Редакт.', edit_product_path(product) %>
+              <%= link_to 'Редакт.', edit_product_path(product, :page => params[:page] ) %>
               <%= link_to 'Удалить', product_path(product), method: :delete, data: { confirm: 'Вы действительно хотите удалить запись?' } %>
             </td>
           </tr>
