--- a/app/views/user_mailer/contact_email.text.erb
+++ b/app/views/user_mailer/contact_email.text.erb
@@ -1,6 +1,10 @@
-HI HI HI<br>
+Письмо с сайта lipetsk.megre.ru
 
-<%= @name %><br>
-<%= @email %><br>
-<%= @subject %><br>
-<%= @body %><br>
+_____________________________________________
+Имя: <%= @name %>
+E-mail: <%= @email %>
+_____________________________________________
+
+Содержание письма: <%= @body %>
+
+_____________________________________________
