--- a/app/views/user_mailer/contact_email.text.erb
+++ b/app/views/user_mailer/contact_email.text.erb
@@ -1,10 +1,14 @@
 Письмо с сайта lipetsk.megre.ru
 
 _____________________________________________
+
 Имя: <%= @name %>
 E-mail: <%= @email %>
+IP-адрес: <%= @ip_address %>
 _____________________________________________
 
-Содержание письма: <%= @body %>
+Содержание письма:
+
+<%= @body %>
 
 _____________________________________________
