--- a/app/views/user_mailer/order_email.text.erb
+++ b/app/views/user_mailer/order_email.text.erb
@@ -3,12 +3,12 @@
 _____________________________________________
 
 Имя: <%= @name %>
-Телефон: <%= @tel %>
+E-mail: <%= @email %>
 IP-адрес: <%= @ip_address %>
 _____________________________________________
 
-Клиент хочет заказать:
+Содержание письма:
 
-<%= @order_name %>
+<%= @body %>
 
 _____________________________________________
