--- a/app/views/statics/order.html.erb
+++ b/app/views/statics/order.html.erb
@@ -37,7 +37,7 @@
               </div>
               <div class="form-group">
                 <%= label_tag 'tel', 'Телефон', class: 'text-dark' %><span class="warning"> *</span>
-                <%= text_field_tag 'tel', nil, class: 'form-control  form-control--contact', placeholder: 'Имя' %>
+                <%= text_field_tag 'tel', nil, class: 'form-control  form-control--contact', placeholder: '8-921-456-1234' %>
               </div>
               <span class="hidden-xs">Отмечены <span class="warning">*</span> обязательные к заполнению</span>
 
