--- a/app/views/user_mailer/order_email.text.erb
+++ b/app/views/user_mailer/order_email.text.erb
@@ -3,12 +3,12 @@
 _____________________________________________
 
 Имя: <%= @name %>
-E-mail: <%= @email %>
+Телефон: <%= @tel %>
 IP-адрес: <%= @ip_address %>
 _____________________________________________
 
-Содержание письма:
+Клиент хочет заказать:
 
-<%= @body %>
+<%= @order_name %>
 
 _____________________________________________
