--- a/app/views/products/main.html.erb
+++ b/app/views/products/main.html.erb
@@ -101,7 +101,7 @@
 
                     <div class="products__price">
                       <% if product.price.nil?%>
-                        <%= link_to "Заказать", order_path(:name => product.name) %>
+                        <%= link_to "Заказать", order_path(:order_name => product.name) %>
                       <% else %>
                         <%= product.price %> р.
                       <% end %>
