--- a/app/views/products/main.html.erb
+++ b/app/views/products/main.html.erb
@@ -177,7 +177,7 @@
           <div class="col-xs-4">
             <div class="products__price">
               <% if product.price.nil?%>
-                <%= link_to "Заказать", order_path(:name => product.name) %>
+                <%= link_to "Заказать", order_path(:order_name => product.name) %>
               <% else %>
                 <%= product.price %> р.
               <% end %>
@@ -252,7 +252,7 @@
             </div>
             <span class="products__price--widgets">
               <% if product.price.nil?%>
-                <%= link_to "Заказать", order_path(:name => product.name) %>
+                <%= link_to "Заказать", order_path(:order_name => product.name) %>
               <% else %>
                 <%= product.price %> р.
               <% end %>
