--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -56,7 +56,13 @@
             <% end %>
           </span>
           <h1 class="single-product__title"><%= @product.name %></h1>
-          <span class="single-product__price"><%= @product.price %> р.</span>
+          <span class="single-product__price">
+            <% if product.price.nil?%>
+              <%= link_to "Заказать", order_path(:order_name => product.name) %>
+            <% else %>
+              <%= product.price %> р.
+            <% end %>
+          </span>
           <hr class="bold__divider">
           <p class="single-product__text">
             <%= simple_format @product.description %>
@@ -100,7 +106,11 @@
               </div>
               <div class="col-xs-4">
                 <div class="products__price">
-                  <%= product.price %> р.
+                  <% if product.price.nil?%>
+                    <%= link_to "Заказать", order_path(:order_name => product.name) %>
+                  <% else %>
+                    <%= product.price %> р.
+                  <% end %>
                 </div>
               </div>
             </div>
