--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <meta name="description" content="Производитель продукции Звенящие кедры россии, Сотрудничество, Продукция Родовых поместий купить, Народные промыслы, Натуральное производство, Натуральные продукты, Натуральная косметика">
   <meta name="author" content="INITweb">
   <meta name='yandex-verification' content='647b0b36ecde65ce' />
+  <meta name="google-site-verification" content="47CWopvQt5bRLM5TqHeOHeAQ33JJoWtOIv0i3WfLGoc" />
   <%= favicon_link_tag 'favicon.png' %>
   <title>Звенящие кедры России - Липецк</title>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
